fix: contract card values alignment

--- a/packages/components/src/components/contract-card/contract-card.scss
+++ b/packages/components/src/components/contract-card/contract-card.scss
@@ -306,6 +306,13 @@
     }
     &--turbos {
         .dc-contract-card {
+            &-item {
+                &__body {
+                    @include mobile {
+                        padding-left: 0;
+                    }
+                }
+            }
             &__buy-price {
                 grid-column: 1/1;
                 grid-row: 1/1;
